--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <cucumber.version>6.9.1</cucumber.version>
+        <selenium-java.version>3.141.59</selenium-java.version>
         <browserstack-local-java.version>1.0.6</browserstack-local-java.version>
         <json-simple.version>1.1.1</json-simple.version>
         <slf4j.version>1.7.30</slf4j.version>
     </properties>
-
+<dependencyManagement>
     <dependencies>
 
         <dependency>
@@ -63,6 +64,7 @@
         </dependency>
 
     </dependencies>
+</dependencyManagement>
 
     <build>
         <plugins>
